compiler/tests/en/errors/pure_void.salam
// EXPECT: E012
pure func nothing(x: int):
    y := x
end

func main:
    nothing(1)
end
